[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = [
    # "--cov",
    "--disable-warnings"
]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | .venv
  | venv
  | .direnv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
